--- a/demo/index.phtml
+++ b/demo/index.phtml
@@ -17,7 +17,14 @@
     font-size: 30px;
     width: 147px;
     float: left;
-    color: #fff;
+    background-image: url(../design/logo.png);
+    background-repeat: no-repeat;
+    background-position: 0 8px;
+  }
+  #header-wrap h1 a {
+    color: rgba(0,0,0,0);
+    height: 42px;
+    display: block;
   }
   #SearchForm {
     float: left;
@@ -75,7 +82,9 @@
 <body>
   <div id="header-wrap">
     <div class="center-wrap">
-      <h1>知乎箱底</h1>
+      <h1>
+        <a href="/">知乎箱底</a>
+      </h1>
       <form id="SearchForm">
         <div class="row">
           <div class="col-md-8">
