--- a/demo/index.phtml
+++ b/demo/index.phtml
@@ -29,18 +29,6 @@
   </div>
   <div class="">
     <div class="center-wrap">
-      <div class="question-item">
-        <div class="question">
-          <a href="" class=" external">为什么刘姥姥这样的穷亲戚在大观园受到王熙凤的款待？</a>
-        </div>
-        <a href="" class="avatar"><img src="http://p2.zhimg.com/5e/4c/5e4ce4ac0_m.jpg"></a>
-        <a href="" class="name">朱怡婧</a>
-        <div class="summary">
-          我接触的性工作者的情况和另一位匿名用户相反，大多数都是自愿的。 我们的时代不算很好，但是也不大可能用暴力、威胁、威迫能用暴力、威胁、威迫威迫威迫威迫威迫的规模、长期...
-          <a href="" class="more-btn">查看详细</a>
-        </div>
-      </div>
-
       <?php foreach ($answers as $key => $answer): ?>
       <div class="question-item">
         <div class="question">
@@ -57,7 +45,9 @@
     </div>
   </div>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script>$("img").each(function(){$(this).attr("src",$(this).attr("data-actualsrc"))});</script>
+  <script>
+  $("img").each(function(){$(this).attr("src",$(this).attr("data-actualsrc"))});
+  </script>
 
 </body>
 </html>
