--- a/demo/index.phtml
+++ b/demo/index.phtml
@@ -34,11 +34,13 @@
         <div class="question">
           <a href="http://www.zhihu.com/question/<?= $answer->q_id ?>" target="_blank" class=" external"><?= htmlspecialchars($answer->title) ?></a>
         </div>
-        <a href="" class="avatar"><img src="http://p2.zhimg.com/5e/4c/5e4ce4ac0_m.jpg"></a>
+        <a href="http://www.zhihu.com/people/<?= $answer->user ?>" class="avatar">
+          <img src="<?= $answer->avatar ?>">
+        </a>
         <a href="http://www.zhihu.com/people/<?= $answer->user ?>" target="_blank" class="name"><?= htmlspecialchars($answer->nick_name) ?></a>
         <div class="summary">
           <?= mb_strimwidth(strip_tags($answer->text), 0, 128, '...', 'utf8'); ?>
-          <a href="" class="more-btn">查看详细</a>
+          <a target="_blank" href="http://www.zhihu.com/question/<?= $answer->q_id ?>/answer/<?= $answer->aid ?>" class="more-btn">查看详细</a>
         </div>
       </div>
       <?php endforeach ?>
