简单的搜索功能

--- a/demo/index.phtml
+++ b/demo/index.phtml
@@ -18,7 +18,7 @@
       <form id="SearchForm">
         <div class="row">
           <div class="col-md-8">
-            <input placeholder="搜索问题" type="text" name="kw" class="form-control">
+            <input placeholder="搜索问题" type="text" name="kw" class="form-control" value="<?= $kw ?>">
           </div>
           <div class="col-md-2">
             <button class="btn btn-<?= $style == 'red' ? 'danger' : 'primary' ?> ">搜索</button>
