--- a/fetch/mongo/index.phtml
+++ b/fetch/mongo/index.phtml
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>q</title>
+  <link rel="stylesheet" type="text/css" href="/css/screen.css">
 </head>
 <body>
-<ul>
+<ul id="QuestionList">
   <?php foreach ($data as $e): ?>
     <li>
       <div><?= $e['question']['title'] ?></div>
